# hylic

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
benches/: bench_executor_compare.rs  bench_hylic_modes.rs  bench_hylo_compare.rs  bench_module_sim.rs  bench_parallel.rs  bench_sequential.rs  bench_support.rs  bench_vs_handrolled.rs  par_bench.rs
benches/support/: config.rs  hand_runners.rs  hylic_runners.rs  mod.rs  modes.rs  module_sim.rs  real_runners.rs  scenario.rs  tree.rs  work.rs
examples/: blanket_trait_proof.rs  directory_size.rs  domain_proof.rs  fold_construct_proof.rs  inherent_lifted_proof.rs  inherent_run_proof.rs  prelude_local_minimal.rs  prelude_minimal.rs
src/: lib.rs  parref.rs  pipeline.rs  uio.rs  utils.rs
src/ana/: edgy_from_deperr.rs  mod.rs  transformations.rs  treeish_from_deperr.rs  treeish_from_err_edgy.rs
src/cata/: exec.rs  lift.rs  mod.rs  par.rs  par_fold_lazy.rs  par_traverse.rs  seed_lift.rs  sync.rs  tests.rs
src/domain/: mod.rs
src/exec/: mod.rs
src/fold/: algebra.rs  combinators.rs  explainer.rs  mod.rs  transformations.rs  vec_fold.rs
src/graph/: combinators.rs  compose.rs  edgy.rs  graph.rs  mod.rs  seed.rs  types.rs  visit.rs
src/hylo/: adapter.rs  graph_with_fold.rs  mod.rs  seed_adapter.rs  seed_graph_fold.rs
src/ops/: composed_lift.rs  fold.rs  identity_lift.rs  lift.rs  mod.rs  outer_lift.rs  shared_domain_lift.rs  tree.rs
src/prelude/: common_folds.rs  explainer.rs  fallible.rs  (+12 more)
tests/: test_domains.rs  test_eager.rs  test_eager_debug.rs  test_pool.rs
(+329 files in other folders)
