[package]
name = "hylic"
version = "0.8.0"
edition = "2021"
rust-version = "1.75"
description = "Composable tree computation: monoidal catamorphisms with parallel execution."
license = "MIT"
readme = "README.md"
repository = "https://github.com/simlei/hylic"
homepage = "https://hylic.balcony.codes"
documentation = "https://hylic.balcony.codes"
keywords = ["recursion-schemes", "catamorphism", "tree", "parallel", "fold"]
categories = ["data-structures", "concurrency", "algorithms"]
exclude = ["KB/**", "__Scratch__", "notes.txt", "doc/**", ".plans/**"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
either = "1.15.0"
derive_more = { version = "2.0.1", features = ["full"] }
atomic-wait = "1"
